[project]
name = "taskiq-psqlpy"
version = "0.1.8"
description = "PSQLPy and PostgreSQL integration for taskiq"
authors = [
    { name = "Taskiq team", email = "taskiq@no-reply.com" }
]
maintainers = [
    { name = "Taskiq team", email = "taskiq@no-reply.com" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
homepage = "https://github.com/taskiq-python/taskiq-psqlpy"
repository = "https://github.com/taskiq-python/taskiq-psqlpy"
keywords = [
    "taskiq",
    "tasks",
    "distributed",
    "async",
    "postgresql",
    "result_backend",
    "psqlpy",
]
requires-python = ">=3.10"
dependencies = [
    "psqlpy>=0.11.11",
    "taskiq>=0.12.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "pre-commit>=4.5.0",
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "polyfactory>=3.1.0",
    "sqlalchemy-utils>=0.42.1",
]
lint = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "ruff>=0.14.7",
    "autoflake>=2.3.1",
    "wemake-python-styleguide>=1.4.0",
    "yesqa>=1.5.0",
]


[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "taskiq_psqlpy"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
select = [
    "E", # Error
    "F", # Pyflakes
    "W", # Pycodestyle
    "C90", # McCabe complexity
    "I", # Isort
    "N", # pep8-naming
    "D", # Pydocstyle
    "ANN", # Pytype annotations
    "S", # Bandit
    "B", # Bugbear
    "COM", # Commas
    "C4", # Comprehensions
    "ISC", # Implicit string concat
    "PIE", # Unnecessary code
    "T20", # Catch prints
    "PYI", # validate pyi files
    "Q", # Checks for quotes
    "RSE", # Checks raise statements
    "RET", # Checks return statements
    "SLF", # Self checks
    "SIM", # Simplificator
    "PTH", # Pathlib checks
    "ERA", # Checks for commented out code
    "PL", # PyLint checks
    "RUF", # Specific to Ruff checks
    "FA102", # Future annotations
    "UP", # Pyupgrade
]
ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D212", # Multi-line docstring summary should start at the first line
    "D401", # First line should be in imperative mood
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "ANN401", # typing.Any are disallowed in `**kwargs
    "PLR0913", # Too many arguments for function call
    "D106", # Missing docstring in public nested class
]
exclude = [".venv/"]
mccabe = { max-complexity = 10 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # Use of assert detected
    "S301", # Use of pickle detected
    "D103", # Missing docstring in public function
    "SLF001", # Private member accessed
    "S311", # Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "D101", # Missing docstring in public class
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["taskiq_dependencies.Depends", "taskiq.TaskiqDepends"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: marks unit tests",
    "integration: marks tests with real infrastructure env",
]
